WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238666
(REGRESSION
r291992
) showRenderTree fails to print the name of the renderer when "(" is present
https://bugs.webkit.org/show_bug.cgi?id=238666
Summary
(REGRESSION r291992) showRenderTree fails to print the name of the renderer w...
alan
Reported
2022-04-01 08:16:36 PDT
e.g. RenderRubyBase (anonymous)
Attachments
[fast-cq] Patch
(1.46 KB, patch)
2022-04-01 08:19 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-04-01 08:19:51 PDT
Created
attachment 456362
[details]
[fast-cq] Patch
EWS
Comment 2
2022-04-01 12:24:38 PDT
Committed
r292228
(
249130@main
): <
https://commits.webkit.org/249130@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 456362
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-04-01 12:25:16 PDT
<
rdar://problem/91176068
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug