(REGRESSION r291992) showRenderTree fails to print the name of the renderer when "(" is present https://bugs.webkit.org/show_bug.cgi?id=238666

Reviewed by Antti Koivisto.

* rendering/RenderObject.cpp:
(WebCore::RenderObject::outputRenderObject const): with names like "RenderRubyBase (anonymous)" we print an address and not "RenderRubyBase"



Canonical link: https://commits.webkit.org/249130@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292228 268f45cc-cd09-0410-ab3c-d52691b4dbfc